# aie5-repos-v2

00_AIM_Quicklinks/: README.md
07_Synthetic_Data_Generation_and_LangSmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
07_Synthetic_Data_Generation_and_LangSmith/data/: 2023_llms.html
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Solution_Notebook.ipynb  README.md
10_Finetuning_Reasoning_Model/: README.md
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  README.md
14_Open_DeepResearch/: README.md  open-deep-research.ipynb
15_Open_Source_Endpoints/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb  README.md  pyproject.toml  requirements.txt
15_Open_Source_Endpoints/Application_Start/: pyproject.toml
16_LLMOps/: .gitignore  LangChain Prototyping Assignment.ipynb  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  README.md  test_caching.py
16_LLMOps/cache/: b2ffaa0dd5948456f3a664e713cd25d8054f87a2-b671-5ea5-9395-d3d349113974  b2ffaa0dd5948456f3a664e713cd25d807abcb70-5571-58ae-be6b-e52e4731c8df  b2ffaa0dd5948456f3a664e713cd25d809b4e28f-7b3f-5099-bd00-239bc249acd8  b2ffaa0dd5948456f3a664e713cd25d80ee9f278-2ee6-5b8a-b538-63825cc1e824  (+70 more)
16_LLMOps/deep_research/: .env.example  Dockerfile  (+4 more)
17_On_Prem_Agent/: README.md  pyproject.toml  qdrant_setup.ipynb  test_ollama.ipynb
18_Inference_Optimization_Through_Quantization/: README.md
(+2 files in other folders)
